# SU2

./: .all-contributorsrc  .autotools  .clang-format  .clang-tidy  .config_template.cfg.swo  .config_template.cfg.swp  .cproject  .gitignore  .gitmodules  .lgtm.yml  .pep8  .pre-commit-config.yaml  .project  .travis.yml  AUTHORS  AUTHORS.md  CConfig.hpp  CEulerSolver.cpp  CFVMFlowSolverBase.inl  CMakeLists.txt  CODE_OF_CONDUCT.md  CPPLINT.cfg  CSpeciesSolver.cpp  CTurbSASolver.cpp  CTurbSSTSolver.cpp  Diag_Upper.hpp  Doxyfile  GetPMatrix.hpp  IMPLEMENTATION_NOTES.md  INSTALL  LICENSE.md  LICENSE.txt  Licence_Agreement.rtf  MVP.hpp  Make_SU_FP  Make_SU_FP_lapack  Makefile.am  Makefile.in  Modif.txt  Offsite Technical Data stg 1.pdf.crdownload  (+51 more)
Common/: CMakeLists.txt
Common/doc/: docmain.hpp  su2_doxyfile
Common/include/: CBoxMeshReaderFVM.hpp  CCGNSMeshReaderFVM.hpp  CConfig.hpp  CMeshReaderFVM.hpp  CMultiGridQueue.hpp  CRectangularMeshReaderFVM.hpp  CSU2ASCIIMeshReaderFVM.hpp  Gauss_Elimination_core.hpp  ad_structure.hpp  ad_structure.inl  adt_structure.hpp  adt_structure.inl  blas_structure.hpp  cgns_elements.hpp  code_config.hpp  complex_structure.hpp  complex_structure.inl  config_structure-good.inl  config_structure.hpp  config_structure.inl  datatype_structure.hpp  datatype_structure.inl  dense_matrix_product.hpp  dual_grid_structure.hpp  dual_grid_structure.inl  eigen_structure.hpp  element_structure.hpp  element_structure.inl  embed_python.hpp  fem_cgns_elements.hpp  fem_gauss_jacobi_quadrature.hpp  fem_gauss_jacobi_quadrature.inl  fem_geometry_structure.hpp  fem_geometry_structure.inl  fem_interpolation_structure.hpp  fem_standard_element.hpp  fem_standard_element.inl  gauss_jacobi_quadrature.hpp  gauss_jacobi_quadrature.inl  gauss_structure.hpp  (+49 more)
Common/lib/: Makefile.am  Makefile.in
Common/src/: CBoxMeshReaderFVM.cpp  CCGNSMeshReaderFVM.cpp  CConfig.cpp  CMeshReaderFVM.cpp  CMultiGridQueue.cpp  CRectangularMeshReaderFVM.cpp  CSU2ASCIIMeshReaderFVM.cpp  ad_structure.cpp  adt_structure.cpp  blas_structure.cpp  cgns_elements.cpp  config_structure.cpp  config_structure_BACKUP_58805.cpp  config_structure_BASE_59010.cpp  config_structure_LOCAL_58924.cpp  datatype_structure.cpp  dense_matrix_product.cpp  dual_grid_structure.cpp  element_linear.cpp  element_structure.cpp  embed_python.cpp  fem_cgns_elements.cpp  fem_gauss_jacobi_quadrature.cpp  fem_geometry_structure.cpp  fem_integration_rules.cpp  fem_interpolation_structure.cpp  fem_standard_element.cpp  fem_wall_distance.cpp  fem_work_estimate_metis.cpp  gauss_jacobi_quadrature.cpp  gauss_structure.cpp  gelite.cpp  geometry_structure.cpp  geometry_structure_fem_part.cpp  gradient_projection.cpp  graph_coloring_structure.cpp  graph_vertex_coloring.cpp  grid_adaptation_structure.cpp  grid_movement_structure.cpp  interpolation_structure.cpp  (+17 more)
Common/test/: Makefile.am  Makefile.in  resolution_3d_integration_test.cpp  resolution_gradient_test.cpp  resolution_integration_test.cpp  resolution_rotated_test.cpp  resolution_smooth_test.cpp  resolution_tensor_test.cpp  resolution_tensor_test_2D.cpp  resolution_tensor_test_3D.cpp  resolution_triangle_test.cpp  unit_test_config  unit_test_config.cpp
SU2_CFD/: CMakeLists.txt  makefile
SU2_CFD/config/: makefile  makefile.darwin.gcc4.2.1.in  makefile.darwin.gcc4.2.1.mpi.in  makefile.darwin.icc.12.1.0.in  makefile.darwin.icc.12.1.0.mpi.in  makefile.redhat.gcc4.1.2.in  makefile.redhat.gcc4.1.2.mpi.in  makefile.redhat.icc.12.0.2.in  makefile.suse.gcc4.1.2.mpi.in
SU2_CFD/include/: CMarkerProfileReaderFVM.hpp  DBMember.hpp  SU2_CFD.hpp  SUBoom.hpp  checkpointing.hpp  cmutation.hpp  data_manufactured_solutions.hpp  definition_structure.hpp  driver_structure.hpp  element_structure.hpp  element_structure.inl  error_estimation_structure.hpp  fem_interpolation_structure.hpp  fluid_model.hpp  fluid_model.inl  fluid_model_lut.hpp  fluidprop.h  functions_turbulent.hpp  gauss_structure.hpp  gauss_structure.inl  heat_capacity.hpp  heat_capacity.inl  hybrid_RANS_LES_model.hpp  hybrid_anisotropy_model.hpp  inlet_funct.hpp  inlet_interpolation_functions.hpp  integration_structure.hpp  integration_structure.inl  iteration_structure.hpp  liquid_phase_model.hpp  liquid_phase_model.inl  math_ad.hpp  nnet.hpp  nucleation_model.hpp  nucleation_model.inl  numerics_direct_mean.hpp  numerics_machine_learning.hpp  numerics_machine_learning.inl  numerics_machine_learning_turbulent.hpp  numerics_structure.hpp  (+26 more)
SU2_CFD/src/: CMarkerProfileReaderFVM.cpp  SU2_CFD.cpp  SU2_Test.cpp  SU2_Timer.cpp  SUBoom.cpp  checkpointing.cpp  cmutation.cpp  data_manufactured_solutions.cpp  definition_structure.cpp  driver_adjoint_multizone.cpp  driver_adjoint_singlezone.cpp  driver_direct_multizone.cpp  driver_direct_singlezone.cpp  driver_dummy.cpp  driver_structure.cpp  driver_structure.hpp  driver_structure_checkpointing.cpp  element_linear.cpp  element_structure.cpp  error_estimation_structure.cpp  fem_interpolation_structure.cpp  (+220 more)
SU2_DEF/: CMakeLists.txt
SU2_DOT/: CMakeLists.txt
SU2_PY/: 2DChannel.py  3DChannel.py  CMakeLists.txt  Compute_polar.py  FSIshape_optimization.py  FSIshape_optimization_test.py  LaunchFSIComputation.py  Makefile  Makefile.am  Makefile.am~  Makefile.in  OptimalPropeller.py  SU2_CFD.py  abstraction.txt  back_mesh.py  box.py  change_version_number.py  compute_ecc.py  compute_metric.py  compute_multipoint.py  compute_polar.py  compute_stability.py  compute_uncertainty.py  config_NACA0012.cfg  config_gui.py  continuous_adjoint.py  convert_routines_c2c.py  convert_routines_c2cpp.py  convert_routines_cpp2c.py  convert_to_csv.py  copy_directory.py  differentiate_routines.py  direct_differentiation.py  discrete_adjoint.py  documentation.txt  downstream_function.py  filter_adjoint.py  find_cfl_number.py  finite_differences.py  flip_surfs.py  (+37 more)
SU2_SOL/: CMakeLists.txt
UnitTests/: UnitQuadTestCase.hpp  meson.build  test_driver.cpp
cgnslib_3.1.4/: CMakeLists.txt  changelog  cmake_uninstall.cmake.in  install.lyx  install.txt  readme.lyx  readme.txt
legacy/: Makefile.am  configure.ac  preconfigure.py
(+17961 files in other folders)
