CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT ( SU2 )

SET ( CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake )

FIND_PACKAGE ( MPI REQUIRED )
INCLUDE_DIRECTORIES (
  ${MPI_CXX_INCLUDE_PATH}
  ${MPI_C_INCLUDE_PATH}
  )
SET ( CMAKE_CXX_COMPILER ${MPI_CXX_COMPILER} )


FIND_PACKAGE ( JSONCPP REQUIRED )
INCLUDE_DIRECTORIES ( ${JSONCPP_INCLUDE_DIR} )

FIND_PACKAGE ( Metis REQUIRED )
INCLUDE_DIRECTORIES ( ${Metis_INCLUDE_DIR} )

FIND_PACKAGE ( CGNS REQUIRED )
INCLUDE_DIRECTORIES ( ${CGNS_INCLUDE_DIR} )

ADD_DEFINITIONS ( -DNO_MUTATIONPP -DNO_TECIO -DMETIS_5 )

ADD_SUBDIRECTORY ( Common )
ADD_SUBDIRECTORY ( SU2_CFD )
ADD_SUBDIRECTORY ( SU2_DDC )
ADD_SUBDIRECTORY ( SU2_GDC )
ADD_SUBDIRECTORY ( SU2_GPC )
ADD_SUBDIRECTORY ( SU2_MAC )
ADD_SUBDIRECTORY ( SU2_MDC )
ADD_SUBDIRECTORY ( SU2_PBC )
ADD_SUBDIRECTORY ( SU2_SOL )
ADD_SUBDIRECTORY ( SU2_UMC )
